tests/errors/sem_call26.java
public class sem_call26 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method("uDhviJapoIQphKtyLO" , s);
}
}